--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,8 @@ body {
 */
 
 #calendar-journal-page {
-  height: 80vh;
+  height: 88vh;
+  overflow: hidden;
 }
 
 .search-bar-container {
